--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 cycler==0.10.0
+decorator==4.4.2
 joblib==0.15.1
 kiwisolver==1.2.0
 matplotlib==3.2.1
+networkx==2.4
 numpy==1.18.5
 pandas==1.0.4
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
+scikit-fuzzy==0.4.2
 scikit-learn==0.23.1
 scipy==1.4.1
 six==1.15.0
